--- a/message/message.html
+++ b/message/message.html
@@ -53,12 +53,11 @@
 </style>
   
 <body>
-    <a href="http://localhost:3000/auth">
-        <img src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg" width="222" />
-    </a>
+
     <div>
         <button class="friends">친구목록조회</button>
         <button onclick="REST_Call()">나에게 메시지보내기</button>
+
     </div>
 </body>
 
@@ -66,7 +65,7 @@
 
 <script type="text/javascript">
 
-    function REST_Call(path) {
+    function sendMsgToMe(path) {
         axios.get('auth', { 
             headers: {
                 'Content-Type': 'application/json'
@@ -74,21 +73,11 @@
          })
         .then(({ data }) => {
             console.log(data);
+            location.href = data;
         })
         .catch(err => {
             console.log(err);
         })
-    }
-
-
-    const sendMsgToMe = async () => {
-        const test = fetch('/send_message/me', {
-            method: 'GET',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-        });
-        alert('메시지를 발송했습니다.');
     }
 </script>
 
