--- a/message/message.html
+++ b/message/message.html
@@ -66,19 +66,27 @@
 <script type="text/javascript">
 
     function kakaoAuth(path) {
+        try {
+            const resp = axios.get('auth', { 
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+            })
+            .then(({ data }) => {
+                location.href = data;
+            })
+            .catch(err => {
+                console.log(err);
+            });
+            resp.then(value => console.log(value));
+
+        } catch (error) {
+            
+        }
+
         
-        axios.get('auth', { 
-            headers: {
-                'Content-Type': 'application/json'
-            },
-         })
-        .then(({ data }) => {
-            console.log(data);
-            location.href = data;
-        })
-        .catch(err => {
-            console.log(err);
-        })
+
+
     }
 </script>
 
